welcome.lessons.welcome.methods.args.MethodsArgs.scala.code

move(get(Y)) getDirection
setY(0)